docs: update project swagger
